Refactor logging configuration, remove unused test, and introduce new classes for review context and orchestrator
- Updated logger name in logback.xml from "com.example.reviewer" to "dev.logicojp.reviewer".
- Deleted unused test class FileExtensionUtilsTest.
- Added ReviewContext class to encapsulate shared configuration for review agents.
- Created ReviewOrchestratorFactory to streamline the creation of ReviewOrchestrator instances.
- Implemented FrontmatterParser for parsing YAML frontmatter in Markdown files.
- Added AgentMarkdownParserTest to validate parsing of agent definitions with and without frontmatter.
- Introduced CliParsingTest to validate command-line argument parsing functionality.
- Created ContentSanitizerTest to ensure proper sanitization of content.
- Added FindingsExtractorTest to extract findings from review content.
- Implemented FrontmatterParserTest to validate frontmatter parsing functionality.